<resources>
    <string name="app_name">tacho_client</string>
    <string name="main_page_title_text">Телеметрия</string>
    <string name="tachograph_connection_text">Подключение к Тахографу:</string>
    <string name="ebm_connection_text">Подключение к ЭБУ:</string>
    <string name="disconnected_state">Отключено</string>
    <string name="connected_state">Подключено</string>
    <string name="connect_state">Подключение</string>
    <string name="connect_button_text">Подкючить</string>
    <string name="bt_connection_page_title_text">Выбор устройства Bluetooth</string>
    <string name="device_name_test_text">Tachograpg1</string>
    <string name="device_mac_address_test_text">88:12:31:51:21:31</string>
    <string name="bt_on_text">Bluetooth включен</string>
    <string name="bt_off_text">Bluetooth выключен</string>
</resources>